secured authentication with jwt and spring security

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=Dubemnada_17
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+jwt.secret= hxMsfA1Z9160xeQiAm+VXOOBlJ//GYvgbVd/8IAMQDs=
