--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret= hxMsfA1Z9160xeQiAm+VXOOBlJ//GYvgbVd/8IAMQDs=
+
+
+
+# === Gmail OAuth Configuration ===
+gmail.client.id=54843656821-5ak66sasthkmah3dmvlos5uehpt7vfj3.apps.googleusercontent.com
+gmail.client.secret=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
+gmail.redirect.uri=http://localhost:8080/auth/gmail/callback
+
