WIP: local edits before syncing with main

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,4 +15,4 @@ jwt.secret= hxMsfA1Z9160xeQiAm+VXOOBlJ//GYvgbVd/8IAMQDs=
 gmail.client.id=54843656821-5ak66sasthkmah3dmvlos5uehpt7vfj3.apps.googleusercontent.com
 gmail.client.secret=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
 gmail.redirect.uri=http://localhost:8080/auth/gmail/callback
-
+gmail.oauth.scopes=https://www.googleapis.com/auth/gmail.readonly https://www.googleapis.com/auth/userinfo.email
