--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -34,6 +34,10 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId></groupId>
+        </dependency>
+
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
