--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.0",
