--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,5 +14,16 @@ jwt.secret= hxMsfA1Z9160xeQiAm+VXOOBlJ//GYvgbVd/8IAMQDs=
 # === Gmail OAuth Configuration ===
 gmail.client.id=54843656821-5ak66sasthkmah3dmvlos5uehpt7vfj3.apps.googleusercontent.com
 gmail.client.secret=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
-gmail.redirect.uri=http://localhost:8080/auth/gmail/callback
+#gmail.redirect.uri=http://localhost:8080/auth/gmail/callback
+
+app.backend.url=http://localhost:8080
+gmail.redirect.path=/auth/gmail/callback
+
+gmail.redirect.uri=${app.backend.url}${gmail.redirect.path}
+
 gmail.oauth.scopes=https://www.googleapis.com/auth/gmail.readonly https://www.googleapis.com/auth/userinfo.email
+
+
+# === Frontend Stuff ===
+app.frontend.url=http://localhost:3000
+
